[gd_scene load_steps=2 format=3 uid="uid://btxgtsxntydrd"]

[ext_resource type="Script" uid="uid://dv1xhulkumblf" path="res://scripts/ui/performance/performance_monitor.gd" id="1_8j50w"]

[node name="PerformanceMonitor" type="CanvasLayer"]
script = ExtResource("1_8j50w")

[node name="StatsContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 104.0
grow_horizontal = 0

[node name="StatsDisplay" type="VBoxContainer" parent="StatsContainer"]
layout_mode = 2

[node name="FpsLabel" type="Label" parent="StatsContainer/StatsDisplay"]
layout_mode = 2

[node name="MemLabel" type="Label" parent="StatsContainer/StatsDisplay"]
layout_mode = 2

[node name="ObjectsLabel" type="Label" parent="StatsContainer/StatsDisplay"]
layout_mode = 2

[node name="DrawLabel" type="Label" parent="StatsContainer/StatsDisplay"]
layout_mode = 2
